2006-02-17  Jim Meyering  <jim@meyering.net>

	* openat.c: Include lstat.h, so that uses of lstat are converted
	to uses of rpl_lstat, e.g., on Solaris 9.  Otherwise, programs like
	du (which now uses the openat-enabled fts and hence fstatat) would
	mistakenly fail to dereference a symlink-to-directory specified
	with a trailing slash.

2006-02-14  Paul Eggert  <eggert@cs.ucla.edu>

	* vasnprintf.c (VASNPRINTF): Rewrite the computation so that we
	need not use xsum.

2006-02-14  Bruno Haible  <bruno@clisp.org>

	Sync from gnulib.

	* vasnprintf.c (VASNPRINTF): In the computation of the size of the
	temporary buffer for sprintf, take into account the precision also
	for 'd', 'i', 'u', 'o', 'x', 'X'.

2006-02-14  Simon Josefsson  <jas@extundo.com>

	Sync from gnulib.

	* getaddrinfo.h: Define EAI_ADDRFAMILY and EAI_SYSTEM if not set,
	for mingw32.

	* gai_strerror.c, getaddrinfo.h: Protect netdb.h #include (for
	mingw32).

2006-02-07  Paul Eggert  <eggert@cs.ucla.edu>

	* closeout.c (close_stdout): Don't assume 'bool' converts nonzero
	ints to 0 or 1, as this isn't true for the stdbool.h substitute.

2006-02-02  Jim Meyering  <jim@meyering.net>

	Eliminate the unwelcome (albeit unlikely) possibility of xmalloc
	failure on deficient systems, and simplify gnulib lgpl dependencies.
	* lstat.c (rpl_lstat): Rewrite to use stat() in place of the
	xmalloc/lstat combination.  Based on a patch from Bruno Haible.

2006-01-27  Paul Eggert  <eggert@cs.ucla.edu>

	* fnmatch.c (L_): Renamed from L, to work around a bug in
	Mac OS X 10.3.9 with GCC 3 reported by Claudio Fontana in
	<http://lists.gnu.org/archive/html/bug-gnulib/2006-01/msg00074.html>.
	All uses changed.

2006-01-26  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool_.h: Sync from gnulib.
	Use signed char with all non-GCC compilers.

2006-01-25  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool_.h: Merge from gnulib; we still don't quite match exactly,
	but we're getting closer.